# fastapi_demo

./: .env.example  .gitignore  MIGRATIONS_GUIDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  orders.py  products.py  users.py
app/api/v2/: __init__.py  router.py
app/api/v2/endpoints/: __init__.py  users.py
app/core/: constants.py  security.py
app/database/: base.py  init_db.py  session.py
app/middleware/: error_handler.py  logging_middleware.py
app/models/: __init__.py  base.py  order.py  product.py  user.py
app/schemas/: order.py  product.py  user.py
app/services/: order_service.py  product_service.py  user_service.py
app/utils/: helpers.py  logger.py  logging_config.py  logging_formatter.py  security.py  validators.py
docs/databases/: README.md  clickhouse.md  mysql.md
migrations/: env.py
migrations/versions/: 001_initial_create_users_table.py  __init__.py
tests/: conftest.py  test_auth.py  test_orders.py  test_products.py  test_users.py
